apps/oracle-cluster/monitoring/alertmanager-ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: alertmanager-ingress
    namespace: monitoring
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:KdrhesAL1C1v07djLy+tXfw9VyPYQXVBQmLPOT+h4AA=,iv:+xMPzcpeyr4nttff4pKdQk2rtIUEYJ9EG0aSexkFInc=,tag:1orxp2KemqbmwTTx3/brEQ==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:HZ7Tk6JUkE4uoLkg5dUuGkQg6tjxhe237fovtp0p2C4=,iv:tUjMBBTmZ4x8pf2myscSQAG1Rz5A4szbGWmc74kbjpc=,tag:YAZsHoBLLFeXnSfUQ97q4w==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: monitoring-kube-prometheus-alertmanager
                        port:
                            number: 9093
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpNmVUYUxiRlpOb1BQcUpR
[...]
            QB4vWn3VR6HtLwdBrKm2MjpVwlgLpmO8Okqdag2LvDtL+63G8/KsSg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-21T06:06:14Z"
    mac: ENC[AES256_GCM,data:Y6w9SfeI7i7nOjzKhIKKQDe/Xk98THcLwCiwdWt2nZs1DjIX3Egl/aTKz9NHqO2vPvvXiNXTR9Zx0kUN1gToXe6YAG8b4T6fxi8UPLnpGJvlhAGf8hnuwuhdh3WRslzNrO4r6g5TwIKkBM/IfkOWS96ftn0XMgZjb6BSxlIlbQs=,iv:VVSWhBqczMyWW3N10z1N3XSFykQ8tgUryVGGt/1a6tU=,tag:o8zAofqMUAKGTcDewO8uyw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
