apps/oracle-cluster/monitoring/prometheus-ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: prometheus-ingress
    namespace: monitoring
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:18SB5mBsm5cLQcgqb6g1ODq2ZOZ2nxW/oCiS35K9,iv:buVQn73TtSW3Fbekgr+4mQndlfgJpTMNpZwp3bE52/w=,tag:XSR6B3hPxRK1HhXHdDji8w==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:+p6zem/ZKcftdFP0OGbX4LI5xx7RxFi4gGPDy+U/,iv:Xt4XDchwYUvjpETofMqAvPgBs99Ijd04PLdZZf7x7PE=,tag:1Qe1jy/A/cGRZEL3lYFZlA==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: monitoring-kube-prometheus-prometheus
                        port:
                            number: 9090
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1guzav4sek0x4l3sqx498d34w3z7yy8jact0yav53uza3zrmyf43qcvyza6
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZZXVOS3hiMm50THpPVWRQ
[...]
            iDxII/pl/BWB7Efc5ZwKugtDave5/mBANaQUBTLED8YLhlrGdXoi6w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-21T06:06:23Z"
    mac: ENC[AES256_GCM,data:D6QdnhI0n63urW1u9bgh4gAURSNUDnu5LRTvc53fsGvkhgYyYT6A8n0Oq7JLuBCWlFkKJHMPU9L5JdhIAYngJI9wQUImwEOeARtKh+oW/zTc/vVYFXMC3QoCgcuNhgDOEfQSMjy6onwdPs+jqcPEUyC/6Yn9qF9OeaMo6tRZPZo=,iv:CDs+pWhihfFLoq9Xc/Prworh8pPpIXS5XgKPNP0GsZw=,tag:iscN8cTkjBFIX0ETvfdHRA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalIPs)$
    version: 3.7.3
